--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,7 @@ requests==2.31.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
+flask-mail==0.9.1
+email-reply-parser==0.5.12
+shopify-python-api==12.3.0
+imapclient==2.3.1
