Update anthropic to latest version 0.57.1 with httpx dependency

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ matplotlib==3.8.2
 seaborn==0.13.0
 reportlab==4.0.7
 APScheduler==3.10.4
-anthropic==0.3.11
+anthropic==0.57.1
+httpx>=0.25.0,<1.0
 requests==2.31.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
